Minor bug fix -- made menu overlay extend to bottom of screen (previously, was just covering list items)

--- a/src/SingleListPage/SingleListPage.css
+++ b/src/SingleListPage/SingleListPage.css
@@ -11,5 +11,6 @@
   position: fixed; /* make list unscrollable, and make black overlay extend at least to top bar */
   background: black;
   opacity: 12%;
+  height: 100%;
   pointer-events: none; /* no events will be fired when clicked, so makes tasks under overlay not clickable */
 }
